<resources>
    <string name="app_name">ZikirMatik</string>
    <string name="password123">Password123 </string>
    <string name="first_name_reg">First Name</string>
    <string name="_0412345678">0412345678</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="last_name_reg">Last Name</string>
    <string name="confirm_registration">CONFIRM REGISTRATION</string>
    <string name="login">Login</string>
    <string name="registration">REGISTRATION</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="zet">Özet</string>
</resources>
